Fixed Modal close button overlap and Single word text modal display

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,10 @@ h1 {
   line-height: 1.1;
 }
 
+#title {
+   margin-top: 12px;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
